1.01  2008-XX-XX   Macro parameters no longer clash with labels
                     whose names start the same as a parameter.
                     eg, a param $r no longer clashes with label
                     $rr

1.0   2008-06-13   Original release