@@ -2,5 +2,6 @@
                      whose names start the same as a parameter.
                      eg, a param $r no longer clashes with label
                      $rr
+                   Likewise labels
 
 1.0   2008-06-13   Original release
